--- a/about-stoneage.html
+++ b/about-stoneage.html
@@ -106,8 +106,8 @@ master-slider: yes
   </div>
   
   <div class="container padding-tb-30">
-    <h2 class="thin grey spaced margin-bottom-30" style="text-transform: none; font-size:24px; line-height:3.5rem;">Our relentless drive for innovation and remarkable customer service empowers our customers to succeed in cleaning the world. When our customers and the planet win, we win.</h2>
-    <h2 class="thin grey spaced margin-bottom-30" style="text-transform: none; font-size:24px;">Our mission is to inspire our customers to say, <em class="bold">"Why would I choose anyone but StoneAge?"</em></h2>
+    <h2 class="thin grey spaced margin-bottom-30" style="text-transform: none; font-size:24px; line-height:3.5rem;">Guided by the vision of our founders and dedication of our employee-owners, StoneAge is committed to be an impactful and positive presence in the lives of our employees, customers and local communities. By staying true to our core values, we will sustain and grow our company culture, customer loyalty and long-term business success.</h2>
+    <h2 class="thin grey spaced margin-bottom-30" style="text-transform: none; font-size:24px;"><em class="bold">Our mission is to inspire our customers to say, "Why would I choose anyone but StoneAge?"</em></h2>
   
     <div class="section-heading margin-top-60">
       <h2 style="color:#555;">Who We Are</h2>
@@ -118,16 +118,12 @@ master-slider: yes
         <p>We live and breathe product leadership. We are driven to engineer high quality, industry-leading products that enable our customers to solve tough challenges. We continuously improve our work product and processes so we can better serve our customers' needs. We value and embrace creativity, always looking to lead innovation within our industry, while at the same time effectively managing the risks that are inherent with being technology leaders.</p>
         <h3>Serving the Customer</h3>
         <p>We understand that we exist because of our customers and we work tirelessly to earn and keep their trust. We make decisions and do our work in ways that inspire our customers to say, "Why would we choose anybody but StoneAge?"</p>
-        <h3>Personal Well Being </h3>
-        <p>We care about our health and happiness. We have a strong sense of work/life balance and believe that families come first. We believe that humor in the workplace is essential to our well-being and we encourage laughter, light-heartedness, and some self-deprecating humor. We help each other grow both personally and professionally. We are committed to providing exceptional benefits for our employees. We are committed to giving our team a safe place to work. </p>
       </div>
       <div class="col-sm-5 col-sm-offset-2 text-left">
+        <h3>Personal Well-being </h3>
+        <p>We care about our health and happiness. We have a strong sense of work/life balance and believe that families come first. We believe that humor in the workplace is essential to our well-being and we encourage laughter, light-heartedness, and some self-deprecating humor. We help each other grow both personally and professionally. We are committed to providing exceptional benefits for our employees. We are committed to giving our team a safe place to work. </p>
         <h3>OWN IT </h3>
         <p>We are employee-owners and we embody the OWN IT mindset. We OWN IT by holding ourselves and each other accountable for being great teammates, doing good work, continuously improving, solving problems, and acting like owners. Each one of us takes full responsibility for driving the success of the company. We never say, "that's not my job". We own our actions and responses and graciously succeed or fail as a team. All of this allows us to <strong>DO BIG THINGS!</strong></p>
-        <h3>Driven</h3>
-        <p>We are driven to be market leaders and we do what it takes to serve our customers. We don't sit on our laurels; instead, we embrace and effect change. We are committed to excellence and challenging the status quo. We solve problems and deliver results.</p>
-        <h3>Agile</h3>
-        <p>We are flexible, adaptable and responsive. We believe our future depends on our ability to meet our customers' needs. We willingly engage with our teammates and our customers to quickly respond to changing needs.</p>
       </div>
     </div>
     
