--- a/downhole-tools.html
+++ b/downhole-tools.html
@@ -12,8 +12,7 @@ permalink: /downhole-tools
       <img src="/assets/img/spincat_family_002.jpg" class="img-responsive" alt="SpinCat Downhole Wash Tools"/>
     </div>
     <div class="col-sm-12 heading">
-      <h1>StoneAge SpinCat&trade;</h1>
-      <h3>Downhole Tools</h3>
+      <h1 style="font-weight: 800; font-size:30px; color:#000;"><img src="/assets/img/stoneage_logo_black_only_001.png" alt="StoneAge"/ style="width:300px; margin-bottom: 25px;"> SpinCat Downhole Tools</h1>
     </div>
   </div>
 
