--- a/sewer-tools-nozzles/warthog-wh.html
+++ b/sewer-tools-nozzles/warthog-wh.html
@@ -205,7 +205,7 @@ master-slider: yes
               <div class="col-sm-3 col-centered">
                 <!-- Lightbox call -->
                 <div>
-                  <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #wh-disassembly-vid">
+                  <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #wg-wh-disassembly-vid">
                     <img src="/assets/vid/thumb/wh-disassembly-vid.png" alt="WH Tool Maintenance - Disassembly" class="img-responsive" />
                   </a>
                 </div>
@@ -215,7 +215,7 @@ master-slider: yes
               <div class="col-sm-3 col-centered">
                 <!-- lightbox call -->
                 <div style="margin-right:30px; margin-bottom:10px;">
-                  <a href="#" data-featherlight="/assets/vid/vids.html #wg-wh-disassembly-vid">
+                  <a href="#" data-featherlight="/assets/vid/vids.html #wg-wh-assembly-vid">
                     <img src="assets/vid/thumb/wg-wh-disassembly-vid.png" alt="Warthog WH maintenance video" class="img-responsive" />
                   </a>
                 </div>
