--- a/waterblast-automation/navigator-small-pipe-cleaning.html
+++ b/waterblast-automation/navigator-small-pipe-cleaning.html
@@ -69,7 +69,7 @@ master-slider: yes
       <ul class="feature-list">
         <li>Continuous rotation of the hose allows the nozzle to pass up to eight bends in small pipe</li>
         <li>Small and lightweight system design with a wheeled base for portability</li>
-        <li>Safely contains up tp 100 ft (30 m) of high pressure hose for 85 ft (26 m) of reach</li>
+        <li>Safely contains up to 100 ft (30 m) of high pressure hose for 85 ft (26 m) of reach</li>
         <li>Quick disassembly into modular components which meet plant requirements for single man lift and manway access</li>
         <li>Forward and reverse feed rates can be independently adjusted to optimize dwell time</li>
         <li>CE Certified</li>
