--- a/about-stoneage.html
+++ b/about-stoneage.html
@@ -21,7 +21,7 @@ master-slider: yes
   </div>
 
   <aside class="col-sm-3 col-sm-offset-2 padding-tb-30 cta">
-    <a href="waterblast-automation/autobox-abx-2l.html"><img src="assets/img/product/abx-2l-04.jpg" class="img-responsive"></a>
+    <a href="/abx-2l"><img src="assets/img/product/abx-2l-04.jpg" class="img-responsive"></a>
     <div class="padding-tb-60 padding-left-60">
       <p class="point"><span>What's Our Mission?</span><br/>
       <a href="#bedrock">Read the StoneAge Bedrock</a></p>
