--- a/rentals.html
+++ b/rentals.html
@@ -60,27 +60,62 @@ master-slider: yes
 </section>
 <!-- End Contact Info -->
 
-<!-- Demo Trailer -->
-<section class="fluid-container bg-lt-grey">
-  <div class="container padding-tb-30">
-    <div class="col-sm-5">
-      <img src="assets/img/demo-trailer-06.png" style="position:relative; left:-120px; top:-15px;" />
+<!-- Image slider -->
+<section class="fluid-container margin-top-30" style="border-top:3px solid #efefef; border-bottom:3px solid #efefef;">
+  <div class="container">
+    <div class="col-sm-4 padding-tb-30">
+      <h2 style="color: #9e6033; font-size:460%; letter-spacing:2px;">Available</h2>
+      <h2 style="color: #9e6033; font-size:910%; letter-spacing:2px; font-weight: 800; line-height:80%;">Now</h2>
+      <h2>in our regional rental fleets</h2>
     </div>
-    <div class="col-sm-6 col-sm-offset-1">      
-      <h2 style="font-size:24px;">StoneAge<br><span class="bold" style="font-size:30px;">Demo Trailer</span></h2>
-      <p class="grey"><em style="font-size:20px; font-weight:300;">Experience the power of StoneAge equipment</em><br></p>
-      <ul>
-        <li>We bring equipment demos and field support directly to you</li>
-        <li>In-house training on all Automated Equipment</li>
-        <li>24-hour oncall technical assistance</li>
-        <li>On site tech support</li>
-        <li>Tool servicing and repairs</li>
-      </ul>
-      <a href="/request-demo" class="btn btn-lg btn-block" role="button" style="margin-top:30px;">Request a Demo</a>
+    <div class="col-sm-8" >
+      <div id="rentalsCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#rentalsCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#rentalsCarousel" data-slide-to="1"></li>
+          <li data-target="#rentalsCarousel" data-slide-to="2"></li>
+          <li data-target="#rentalsCarousel" data-slide-to="3"></li>
+          <li data-target="#rentalsCarousel" data-slide-to="4"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+          <div class="item active">
+            <img src="/assets/img/for_rentals_abx-3l_01.jpg" alt="AutoBox ABX-3L">
+          </div>
+
+          <div class="item">
+            <img src="/assets/img/for_rentals_abx-pro_01.jpg" alt="AutoBox ABX-PRO">
+          </div>
+
+          <div class="item">
+            <img src="/assets/img/for_rentals_skr_01.jpg" alt="Striker surface prep">
+          </div>
+
+          <div class="item">
+            <img src="/assets/img/for_rentals_abx-500_01.jpg" alt="AutoBox ABX-500">
+          </div>
+
+          <div class="item">
+            <img src="/assets/img/for_rentals_bc_01.jpg" alt="Rotary tools for surface prep">
+          </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#rentalsCarousel" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#rentalsCarousel" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div><!-- end Carousel -->
     </div>
   </div>
 </section>
-<!-- End Demo Trailer -->
+<!-- END Image slider -->
 
 <section class="fluid-container padding-tb-60 margin-bottom-30 rental-questions">
   <div class="container">
@@ -392,60 +427,26 @@ master-slider: yes
   </div>
 </section>
 
-
-<section class="fluid-container bg-lt-gray margin-top-30">
-  <div class="container">
-    <div class="col-sm-4 padding-tb-30">
-      <h2 style="color: #9e6033; font-size:460%; letter-spacing:2px;">Available</h2>
-      <h2 style="color: #9e6033; font-size:910%; letter-spacing:2px; font-weight: 800; line-height:80%;">Now</h2>
-      <h2>in our regional rental fleets</h2>
+<!-- Demo Trailer -->
+<section class="fluid-container bg-lt-grey">
+  <div class="container padding-tb-60">
+    <div class="col-sm-5">
+      <img src="assets/img/demo-trailer-06.png" style="position:relative; left:-120px; top:-15px;" />
     </div>
-    <div class="col-sm-8" >
-      <div id="rentalsCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-          <li data-target="#rentalsCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#rentalsCarousel" data-slide-to="1"></li>
-          <li data-target="#rentalsCarousel" data-slide-to="2"></li>
-          <li data-target="#rentalsCarousel" data-slide-to="3"></li>
-          <li data-target="#rentalsCarousel" data-slide-to="4"></li>
-        </ol>
-
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner" role="listbox">
-          <div class="item active">
-            <img src="/assets/img/for_rentals_abx-3l_01.jpg" alt="AutoBox ABX-3L">
-          </div>
-
-          <div class="item">
-            <img src="/assets/img/for_rentals_abx-pro_01.jpg" alt="AutoBox ABX-PRO">
-          </div>
-
-          <div class="item">
-            <img src="/assets/img/for_rentals_skr_01.jpg" alt="Striker surface prep">
-          </div>
-
-          <div class="item">
-            <img src="/assets/img/for_rentals_abx-500_01.jpg" alt="AutoBox ABX-500">
-          </div>
-
-          <div class="item">
-            <img src="/assets/img/for_rentals_bc_01.jpg" alt="Rotary tools for surface prep">
-          </div>
-        </div>
-
-        <!-- Left and right controls -->
-        <a class="left carousel-control" href="#rentalsCarousel" role="button" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#rentalsCarousel" role="button" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div><!-- end Carousel -->
+    <div class="col-sm-6 col-sm-offset-1">      
+      <h2 style="font-size:24px;">StoneAge<br><span class="bold" style="font-size:30px;">Demo Trailer</span></h2>
+      <p class="grey"><em style="font-size:20px; font-weight:300;">Experience the power of StoneAge equipment</em><br></p>
+      <ul>
+        <li>We bring equipment demos and field support directly to you</li>
+        <li>In-house training on all Automated Equipment</li>
+        <li>24-hour oncall technical assistance</li>
+        <li>On site tech support</li>
+        <li>Tool servicing and repairs</li>
+      </ul>
+      <a href="/request-demo" class="btn btn-lg btn-block" role="button" style="margin-top:30px;">Request a Demo</a>
     </div>
   </div>
 </section>
+<!-- End Demo Trailer -->
 
 {% include footer-cta.html %}
