--- a/downhole-tools.html
+++ b/downhole-tools.html
@@ -7,19 +7,25 @@ permalink: /downhole-tools
 ---
 
 <main class="spincat landing">
-  <div class="row bg-lt-grey margin-bottom-30 header" style="padding:0;">
+  <div class="row bg-lt-grey header" style="padding:0;">
     <div class="col-sm-12 heading-img">
       <img src="/assets/img/spincat_family_002.jpg" class="img-responsive" alt="SpinCat Downhole Wash Tools"/>
     </div>
-    <div class="col-sm-12 heading">
-      <h1 style="font-weight: 800; font-size:30px; color:#000;"><img src="/assets/img/stoneage_logo_black_only_001.png" alt="StoneAge"/ style="width:300px; margin-bottom: 25px;"> SpinCat Downhole Tools</h1>
+    <div class="container" style="padding:15px;">
+      <div class="row">
+        <div class="col-sm-4">
+          <img src="/assets/img/logo_spincat_registered.png" alt="StoneAge SpinCat Downhole Tools" class="img-responsive" style="padding-top:10px; margin-left: 25px;" />
+        </div>
+        <div class="col-sm-8">
+          <h2 class="width-90 text-left" style="font-size:155%; padding-top:15px;"><strong>StoneAge SpinCat tools provide a durable, controlled rotation solution for well intervention</strong></h2>
+        </div>
+      </div>
     </div>
   </div>
 
   <section class="row padding-tb-30">
     <div class="container">
-      <h2 class="width-90"><strong>StoneAge SpinCat&trade; tools provide a durable, controlled rotation solution for well intervention</strong></h2>
-      <p class="width-90 description margin-bottom-30">A viscous fluid governor controls rotation speed to maximize jet power delivered to the tubing walls. By using only a few rotating jets, each jet is bigger to convey hard-hitting power. Replaceable jets are efficient and clean recesses and irregular surfaces without damaging the well pipe. Over thirty years of waterjet engineering back the StoneAge SpinCat&trade; design, setting the standard for rotary nozzle performance and durability.</p>
+      <p class="width-90 description padding-tb-30 margin-bottom-30">A viscous fluid governor controls rotation speed to maximize jet power delivered to the tubing walls. By using only a few rotating jets, each jet is bigger to convey hard-hitting power. Replaceable jets are efficient and clean recesses and irregular surfaces without damaging the well pipe. Over thirty years of waterjet engineering back the StoneAge SpinCat design, setting the standard for rotary nozzle performance and durability.</p>
       <!-- Tool List -->
       <div class="row">
         <div class="col-sm-6 product-list">
@@ -76,7 +82,7 @@ permalink: /downhole-tools
       <div class="row">
         <div class="col-sm-4 padding-30 grey">
           <h2>How it works</h2>
-          <p>The StoneAge SpinCat&trade; is an extremely durable self-rotating nozzle for well service applications. The powerful rotating jet design is engineered to maximize the limited hydraulic horsepower available to the BHA at the end of a long CT or workstring. Jet reaction force powers rotation of the head and an internal centrifugal speed control mechanism maintains rotation speeds.</p>
+          <p>The StoneAge SpinCat is an extremely durable self-rotating nozzle for well service applications. The powerful rotating jet design is engineered to maximize the limited hydraulic horsepower available to the BHA at the end of a long CT or workstring. Jet reaction force powers rotation of the head and an internal centrifugal speed control mechanism maintains rotation speeds.</p>
         </div>
         <div class="col-sm-4 padding-30 grey">
           <h2>Jetting</h2>
@@ -84,7 +90,7 @@ permalink: /downhole-tools
         </div>
         <div class="col-sm-4 padding-30 grey">
           <h2>Features</h2>
-          <p>StoneAge SpinCat&trade; tools have a straight flow-through design with a leak-free high pressure seal, so pump power is not wasted. The tools can be used at temperatures up to 200°C, with up to 30% HCL and Nitrogen injection.</p>
+          <p>StoneAge SpinCat tools have a straight flow-through design with a leak-free high pressure seal, so pump power is not wasted. The tools can be used at temperatures up to 200°C, with up to 30% HCL and Nitrogen injection.</p>
         </div>
       </div>
     </div>
