--- a/index.html
+++ b/index.html
@@ -413,6 +413,21 @@ landing: yes
     </div>
     <ul class="home-news list-unstyled"> 
       <li>
+        <h4><a href="https://news.stoneagetools.com/introducing-industrial-theory-podcast-episode-1-with-jimmy-peck/">Introducing Industrial Theory Podcast: Episode #1 with Jimmy Peck</a></h4>
+        <p>Hosted by Kerry Siggins, CEO of StoneAge, Industrial Theory is a podcast created specifically for the industrial cleaning industry.<br>
+        <small><i class="fa fa-paper-plane-o"></i> E-blast, November 2019</small></p>
+      </li>
+      <li>
+        <h4><a href="https://www.businesswire.com/news/home/20191016005208/en/StoneAge-CEO-Kerry-Siggins-Appointed-Colorado-Employee" target="_blank">StoneAge CEO Kerry Siggins Appointed to Colorado Employee Ownership Commission by Gov. Polis</a></h4>
+        <p>Durango-based company’s ESOP model serves as example for other CO businesses<br>
+        <small><i class="fa fa-newspaper-o"></i> Press, November 2019</small></p>
+      </li>
+      <li>
+        <h4><a href="https://news.stoneagetools.com/stoneage-welcomes-new-sales-director-americas/">StoneAge Welcomes New Sales Director-Americas</a></h4>
+        <p>We are pleased to welcome Dan De La Torre to the StoneAge team as the Sales Director-Americas. He will be based out of Phoenix, and will provide sales to our customers throughout the Americas.<br>
+        <small><i class="fa fa-paper-plane-o"></i> E-blast, November 2019</small></p>
+      </li>  
+      <li>
         <h4><a href="https://news.stoneagetools.com/custom-engineered-solutions-for-your-most-challenging-waterblasting-jobs/">Need customized equipment for your next job?</a></h4>
         <p>The StoneAge Solutions team can engineer custom solutions to help contractors and plants clean the most difficult applications.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, August 2019</small></p>
@@ -421,22 +436,7 @@ landing: yes
         <h4><a href="https://news.stoneagetools.com/stoneage-welcomes-new-waterblast-sales-manager-for-north-east-region/">StoneAge Welcomes New Waterblast Sales Manager</a></h4>
         <p>StoneAge is pleased to welcome Jonathan Wood to the sales team.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, June 2019</small></p>
-      </li>
-      <li>
-        <h4><a href="https://news.stoneagetools.com/new-warthog-wt-1-2-now-available/">New Warthog WT-1/2 Now Available</a></h4>
-        <p>StoneAge releases a new configuration option for the Warthog WT.<br>
-        <small><i class="fa fa-paper-plane-o"></i> E-blast, May 2019</small></p>
       </li> 
-      <li>
-        <h4><a href="https://news.stoneagetools.com/stoneage-training-now-available-internationally/">StoneAge Training Now Available Internationally</a></h4>
-        <p>StoneAge Training – a comprehensive program designed to educate industrial cleaning professionals in the safe and efficient use of waterjetting tools, safety equipment, and automated systems – is now being offered internationally.<br>
-        <small><i class="fa fa-paper-plane-o"></i> E-blast, May 2019</small></p>
-      </li> 
-      <li>
-        <h4><a href="https://news.stoneagetools.com/announcing-stoneage-training/">Announcing StoneAge Training</a></h4>
-        <p>StoneAge Training is a comprehensive program designed to educate industrial cleaning professionals in the safe and efficient use of waterjetting tools, safety equipment, and automated systems.<br>
-        <small><i class="fa fa-paper-plane-o"></i> E-blast, February 2019</small></p>
-      </li>  
       <li><a href="https://news.stoneagetools.com/">More news here</a></li>
     </ul>
   </div>
