manual updates, etc.

--- a/downhole-tools.html
+++ b/downhole-tools.html
@@ -17,7 +17,7 @@ permalink: /downhole-tools
           <img src="/assets/img/logo_spincat_registered.png" alt="StoneAge SpinCat Downhole Tools" class="img-responsive" style="padding-top:10px; margin-left: 25px;" />
         </div>
         <div class="col-sm-8">
-          <h2 class="width-90 text-left" style="font-size:155%; padding-top:15px;"><strong>StoneAge SpinCat tools provide a durable, controlled rotation solution for well intervention</strong></h2>
+          <h2 class="width-90 text-left" style="font-size:240%; line-height:120%; padding-top:15px;"><strong>A durable controlled rotation solution for well intervention</strong></h2>
         </div>
       </div>
     </div>
