--- a/rotary-waterblast-tools/badger-4in-pipe-cleaning.html
+++ b/rotary-waterblast-tools/badger-4in-pipe-cleaning.html
@@ -178,7 +178,7 @@ master-slider: yes
                     <tr>
                       <th>Flow Range</th>
                       <td>12–25 gpm</td>
-                      <td><span class="metric">344–1500 l/min</span></td>
+                      <td><span class="metric">45-95 l/min</span></td>
                     </tr>
                     <tr>
                       <th>Rotation Speed</th>
