--- a/stoneage-patents.html
+++ b/stoneage-patents.html
@@ -49,6 +49,12 @@ permalink: /patents
         <td>Europe: EP3171993<br>Singapore: 11201700211Q</td>
       </tr>
       <tr>
+        <td>AutoBox ABX-2LB</td>
+        <td>ABX-2LB</td>
+        <td>10,392,218</td>
+        <td></td>
+      </tr>
+      <tr>
         <td>AutoBox ABX-3L</td>
         <td>ABX-3L</td>
         <td>9896299</td>
@@ -81,6 +87,12 @@ permalink: /patents
       <tr>
         <td>Beetle nozzle</td>
         <td>BT</td>
+        <td>9950348<br>10265736</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>Boiler Tube Cleaner</td>
+        <td>BTC</td>
         <td>8006920<br>8220724<br>D724695</td>
         <td>Europe: EP238747B1<br>Taiwan: 1378828<br>Australia: 2009354020<br>New Zealand: 594919<br>Canada: 2752748<br>China:ZL200980157707.0<br>Malaysia: MY159947A<br>Hong Kong: HK1162392</td>
       </tr>
@@ -99,7 +111,7 @@ permalink: /patents
       <tr>
         <td>Hose Containment System</td>
         <td>HCS</td>
-        <td>10336571</td>
+        <td>10336571<br>10427907</td>
         <td></td>
       </tr>
       <tr>
@@ -164,5 +176,5 @@ permalink: /patents
       </tr>
     </tbody>
   </table>
-  <p><span class="grey">Updated: August 02, 2019</span><br><em>StoneAge patent information can be found on the web at <a href="http://www.sapatents.com">www.sapatents.com</a></em></p>
+  <p><span class="grey">Updated: November 11, 2019</span><br><em>StoneAge patent information can be found on the web at <a href="http://www.sapatents.com">www.sapatents.com</a></em></p>
 </section>
